Task 1A refactoring done